--- a/_publications/2026-AAAI.md
+++ b/_publications/2026-AAAI.md
@@ -1,12 +1,14 @@
 ---
-title: "RISE: A Retrieval-Augmented Generation Enhanced Immersive System for Education"
+title: "LiR^3AG: A Lightweight Rerank Reasoning Strategy Framework for Retrieval-Augmented Generation"
 collection: publications
 category: conferences
-permalink: /publication/2026-WWW
-excerpt: 'We have developed an immersive education system based on RAG, MCP, and virtual digital humans.'
-date: 2026-01-12
-venue: 'The Web Conference 2026'
+permalink: /publication/2026-AAAI
+excerpt: 'We explored the reasoning strategies of reasoning models in RAG multi-hop QA tasks, finally proposed a lightweight framework that improves performance while significantly reducing reasoning overhead by integrating three modules.'
+date: 2025-11-08
+venue: 'The Association for the Advancement of Artificial Intelligence 2026'
+paperurl: 'https://arxiv.org/abs/2512.18329'
+bibtexurl: "/files/chen2025lir.bib"
+citation: 'Chen, G., Huang, J., Xie, H., Sun, F., and Jia, T. (2025). <i>LIR<sup>3</sup>AG: A Lightweight Rerank Reasoning Strategy Framework for Retrieval-Augmented Generation</i>. arXiv preprint arXiv:2512.18329.'
 ---
 
-The rapid development of intelligent education has brought new opportunities to the educational industry. However, current systems still face challenges such as limited hardware resources, weak interactivity, and insufficient immersion. To address these issues, we propose Rise (Retrieval-Augmented Generation Enhanced Immersive System for Education with LLMs), an adaptive and immersive learn-
-ing system designed to construct adaptive and immersive educational environments. Rise integrates Retrieval-Augmented Generation (RAG), Model Context Protocol (MCP), and Digital Human (DH) technologies to provide high-quality, personalized educational experiences. Deployed on a lightweight web platform, it ensures accessibility even under hardware constraints and offers key functions including learning analytics, interactive Q&A, immersive classrooms, and attention monitoring. Beyond its technical contributions, Rise demonstrates strong social and educational value. By enabling immersive cultural and contextual learning experiences, it helps students from geographically or economically constrained regions access diverse educational resources and global cultural scenarios. The lightweight deployment promotes educational equity, while personalized interaction fosters learner motivation and inclusiveness. Rise represents a practical step toward next-generation intelligent education that unites technological advancement with social impact.
+Retrieval-Augmented Generation (RAG) effectively enhances Large Language Models (LLMs) by incorporating retrieved external knowledge into the generation process. Reasoning models improve LLM performance in multi-hop QA tasks, which require integrating and reasoning over multiple pieces of evidence across different documents to answer a complex question. However, they often introduce substantial computational costs, including increased token consumption and inference latency. To better understand and mitigate this trade-off, we conduct a comprehensive study of reasoning strategies for reasoning models in RAG multi-hop QA tasks. Our findings reveal that reasoning models adopt structured strategies to integrate retrieved and internal knowledge, primarily following two modes: Context-Grounded Reasoning, which relies directly on retrieved content, and Knowledge-Reconciled Reasoning, which resolves conflicts or gaps using internal knowledge. To this end, we propose a novel Lightweight Rerank Reasoning Strategy Framework for RAG (LiR^3AG) to enable non-reasoning models to transfer reasoning strategies by restructuring retrieved evidence into coherent reasoning chains. LiR^3AG significantly reduce the average 98% output tokens overhead and 58.6% inferencing time while improving 8B non-reasoning model's F1 performance ranging from 6.2% to 22.5% to surpass the performance of 32B reasoning model in RAG, offering a practical and efficient path forward for RAG systems.
