--- a/_publications/2026-WWW.md
+++ b/_publications/2026-WWW.md
@@ -5,7 +5,7 @@ category: conferences
 permalink: /publication/2026-WWW
 excerpt: 'We have developed an immersive education system based on RAG, MCP, and virtual digital humans.'
 date: 2026-01-12
-venue: 'The Web Conference 2026'
+venue: 'The Web Conference 2026 Demo'
 ---
 
 The rapid development of intelligent education has brought new opportunities to the educational industry. However, current systems still face challenges such as limited hardware resources, weak interactivity, and insufficient immersion. To address these issues, we propose Rise (Retrieval-Augmented Generation Enhanced Immersive System for Education with LLMs), an adaptive and immersive learn-
