Modify venue and add date for 2026 WWW publication
Updated the venue name and added the event date for the publication.

--- a/_publications/2026-WWW.md
+++ b/_publications/2026-WWW.md
@@ -4,7 +4,8 @@ collection: publications
 category: conferences
 permalink: /publication/2026-WWW
 excerpt: 'We have developed an immersive education system based on RAG, MCP, and virtual digital humans.'
-venue: 'The Web Conference 2026 Demo'
+venue: 'The Web Conference Demo'
+date: 2026-01-12
 ---
 
 The rapid development of intelligent education has brought new opportunities to the educational industry. However, current systems still face challenges such as limited hardware resources, weak interactivity, and insufficient immersion. To address these issues, we propose Rise (Retrieval-Augmented Generation Enhanced Immersive System for Education with LLMs), an adaptive and immersive learn-
