Fix venue name formatting in 2026-AAAI publication

--- a/_publications/2026-AAAI.md
+++ b/_publications/2026-AAAI.md
@@ -4,7 +4,8 @@ collection: publications
 category: conferences
 permalink: /publication/2026-AAAI
 excerpt: 'We explored the reasoning strategies of reasoning models in RAG multi-hop QA tasks, finally proposed a lightweight framework that improves performance while significantly reducing reasoning overhead by integrating three modules.'
-venue: 'The Association for the Advancement of Artificial Intelligence 2026'
+venue: 'The Association for the Advancement of Artificial Intelligence'
+date: 2026-01-20
 paperurl: 'https://arxiv.org/abs/2512.18329'
 bibtexurl: "/files/chen2025lir.bib"
 citation: 'Chen, G., Huang, J., Xie, H., Sun, F., and Jia, T. (2025). <i>LIR<sup>3</sup>AG: A Lightweight Rerank Reasoning Strategy Framework for Retrieval-Augmented Generation</i>. arXiv preprint arXiv:2512.18329.'
